[tool.poetry]
name = "xpr-usdt"
version = "0.1.0"
description = ""
authors = ["Ivan Patin <payk1230@bk.ru>"]
readme = "README.md"
packages = [{include = "xpr_usdt"}]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.2.7"
requests = "^2.28.2"
redis = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
